--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,6 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
-    "eslint": "4.2.0",
-    "eslint-config-react-app": "^1.0.5",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-flowtype": "2.34.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
@@ -45,7 +38,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "unit-tests": "node scripts/test.js --env=jsdom",
+    "e2e-tests": "wdio config/wdio.conf.js",
+    "selenium-setup": "selenium-standalone install",
+    "selenium-start": "selenium-standalone start"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -88,10 +84,21 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "chai": "4.1.0",
+    "enzyme": "2.9.1",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.2",
+    "eslint-config-react-app": "1.0.5",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-flowtype": "2.34.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0"
+    "eslint-plugin-react": "7.1.0",
+    "react-test-renderer": "15.6.1",
+    "selenium-standalone": "6.5.0",
+    "wdio-dot-reporter": "0.0.8",
+    "wdio-mocha-framework": "0.5.10",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "webdriverio": "4.8.0"
   }
 }
