--- a/client/package.json
+++ b/client/package.json
@@ -97,7 +97,9 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
+    "node-sass": "4.5.3",
     "react-test-renderer": "15.6.1",
+    "sass-loader": "6.0.6",
     "selenium-standalone": "6.5.0",
     "wdio-dot-reporter": "0.0.8",
     "wdio-mocha-framework": "0.5.10",
