--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,7 @@
     "react-error-overlay": "^1.0.9",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
+    "resolve-url-loader": "2.1.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
